# TinyRecursiveModels-MLX

./: .flake8  .gitignore  CONTRIBUTING.md  Final_Promptv2.md  LICENSE  Original Research.md  README.md  SPEC.md  apply_import_replacements.py  cli.py  environment.yml  mlx  pyproject.toml  requirements.txt
.github/workflows/: ci-full.yml  ci.yml
benchmarks/: benchmark_trm.py
docs/: CI.md  migration_guide.md  test.md  test_meta.json
legacy/: pretrain.py  puzzle_dataset.py
legacy/dataset/: build_arc_dataset.py  build_maze_dataset.py  build_sudoku_dataset.py  common.py
legacy/evaluators/: arc.py
legacy/models/: common.py  ema.py  layers.py  losses.py  sparse_embedding.py
legacy/models/recursive_reasoning/: hrm.py  transformers_baseline.py  trm.py  trm_hier6.py  trm_singlez.py
legacy/utils/: functions.py
mlx/: __init__.py  core.py  data_utils.py  model_trm.py  training.py
mlx/utils/: __init__.py  logging_utils.py
src/TinyRecursiveModels_MLX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_benchmark.py  test_cli.py  test_data_fixture.py  test_data_loader.py  test_device.py  test_env_check.py  test_evaluation.py  test_full_integration.py  test_logging.py  test_mlx_import.py  test_skeleton.py  test_train_epoch.py  test_trm_forward.py  test_trm_init.py  test_trm_recursion.py  test_trm_state.py
tests/data/: sample_input.csv  sample_input.npy  sample_target.csv  sample_target.npy
trm_ml/: __init__.py  cli.py  core.py  data_utils.py  device.py  evaluation.py  model_trm.py  training.py  wire_up.py
trm_ml/utils/: logging_utils.py
