[project]
name = "TinyRecursiveModels-MLX"
version = "0.1.0"
description = "Mac MLX port of Tiny Recursive Models for recursive reasoning and multi-step reasoning tasks"
authors = [
    {name = "George Sanders", email = "gajsanders@gmail.com"},
    {name = "Original Authors: Alexia Jolicoeur-Martineau et al."},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.1.0,<1.0.0",
    "numpy>=1.25,<2.0",
    "pytest>=7.4,<8.0",
    "black>=24.3,<25.0",
    "isort>=5.12,<6.0",
    "flake8>=6.0,<7.0",
    "mypy>=1.9,<2.0",
    "psutil>=5.9.0",
]

[project.urls]
homepage = "https://github.com/gajsanders/TinyRecursiveModels-MLX"
repository = "https://github.com/gajsanders/TinyRecursiveModels-MLX"
documentation = "https://github.com/gajsanders/TinyRecursiveModels-MLX/tree/main/docs"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["numpy", "mlx", "pytest"]
skip_gitignore = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "mlx",
    "src",
    "tests",
    "examples",
    "docs"
]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
exclude = "(/build|/dist|/docs|/examples|/__pycache__|/env|/tests/data)"

# Notes:
# This package is designed to run natively on MacOS ARM (Apple Silicon: M1, M2, M3, M4)
# Minimum required macOS version: 13.5 (Ventura)
# Recommended Python: >=3.9; ARM-based Python builds recommended on Apple Silicon
# CUDA, cuDNN, and NVIDIA GPU support removed.
